# ember-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
debug/: log.cpp  log.h
dev_tools/: log.h
include/: app.h  collider.h  game.h  mainFrame.h  vector3.h  window.h
sample/: CMakeLists.txt
src/: CMakeLists.txt  app.cpp  game.cpp  main.cpp  mainFrame.cpp  object.cpp  object.h  vector3.cpp  window.cpp  window.h
src/engine/: app.cpp
src/math/: vector3.cpp
src/physics/colliders/: collider.cpp
src/ui/: window.cpp
